...
            left
            disabled={newMessageLoading || loadingCreateAndUpdatePostDraft}
          />
        }
        right={
          <HeaderItem
            label={t('Send')}
            onPressItem={sendMessage}
            disabled={
              !isValid ||
              selectedUsers.length === 0 ||
              newMessageLoading ||
              loadingCreateAndUpdatePostDraft
...
                      onChange(text);
                      debounceSaveDraft();
                    }}
                    onFocus={() => setShowLeftMenu(false)}
                    placeholder={t('What do you want to talk about?')}
                    placeholderTextColor={colors.darkTextLighter}
                    testID="NewMessage:TextInput:Title"
                    autoCorrect
                  />
                )}
              />
            </View>

...
            <View style={styles.formContainer}>
              <Text style={styles.label}>{t('Recipients')}</Text>
              <TouchableOpacity
                style={styles.row}
                onPress={onPressSelectUser}
                hitSlop={{ top: 15, bottom: 15, left: 15, right: 15 }}
                testID="NewMessage:Button:SelectUser"
              >
                <Text
                  style={{
                    color: length ? colors.textNormal : colors.darkTextLighter,
                    paddingRight: spacing.m,
                  }}
...
                  }}
                  onSelectedChange={(cursor) => {
                    setCursorPosition(cursor);
                  }}
                  placeholder={t('Type a message')}
                  mentionToggled={showUserList}
                  testID="NewMessage:TextArea"
                />
              )}
            />
          </>
        </KeyboardTextAreaScrollView>
      )}
...
