...
          hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
          onFocus={onFocus}
          onBlur={onBlur}
          onContentSizeChange={(e) => {
            updateSize(e.nativeEvent.contentSize.height);
          }}
          testID="ReplyInputField:TextInput"
        >
          <MentionedText textValue={message} />
        </TextInput>
      </View>
      {loading ? (
        <ActivityIndicator />
      ) : (
        (message.trim() !== '' || showButton) && (
          <Icon
            name="ArrowUpward"
            size="xl"
            onPress={onSendReply}
            testID="ReplyInputField:Icon:Reply"
          />
        )
      )}
    </View>
  );
}
...
