...
    return ios ? (
      <ModalHeader
        title={count > 0 ? count + t(' Selected') : t('Select Users')}
        left={<HeaderItem label={t('Cancel')} onPressItem={goBack} left />}
        right={
          <HeaderItem
            label={t('Done')}
            onPressItem={doneSelectingUser}
            loading={searchValue.length > 0 && loading}
            disabled={selectedUsers.length === 0}
          />
        }
      />
    ) : (
      <CustomHeader title={headerTitle} noShadow />
    );
  };

  return (
    <SafeAreaView style={styles.container} testID="SelectUser:SafeAreaView">
      <Header />
      <View style={styles.searchContainer}>
        <Icon name="Search" color={colors.textLighter} />
        <TextInput
          style={styles.searchTextInput}
          value={searchValue}
...
