...
  );
  const menuToolTip = () => {
    return (
      <ScrollView keyboardShouldPersistTaps="handled">
        <MenuItem
          iconName="Link"
          text={t('Add Link')}
          onPress={onPressLink}
          testID="ToolTip:MenuItem:Link"
        />
        <MenuItem
          iconName="Photo"
          text={t('Add Image')}
...
  const actionItemOptions = () => {
    let options: ActionSheetProps['options'] = [];

    if (ios) {
      options.push({ label: t('Cancel') });
    }
    options.push({ label: t('Leave Message') });

    return options;
  };

  const actionItemOnPress = (btnIndex: number) => {
    if (btnIndex === 0) {
...
